@@ -1172,7 +1172,7 @@ $ #Панель информации#
     Для виртуальных устройств (SUBST-дисков) указываются параметры
 основного диска.
 
-    ^<wrap>#Ctrl-S# меняет режим отображения размеров: плавающий с суффиксами или байты.
+    ^<wrap>#Ctrl-Shift-S# меняет режим отображения размеров: плавающий с суффиксами или байты.
 Это влияет также на отображение информации о состоянии памяти.
 Текущий режим - far:config #Panel.Info.ShowBytes# (default=false).
 
