@@ -759,8 +759,8 @@ int InfoList::ProcessKey(const Manager::Key& Key)
 			Parent()->Redraw();
 			return TRUE;
 		}
-		case KEY_CTRLS:
-		case KEY_RCTRLS:
+		case KEY_CTRLSHIFTS:
+		case KEY_RCTRLSHIFTS:
 			Global->Opt->InfoPanel.ShowBytes = !Global->Opt->InfoPanel.ShowBytes; // pass to Redraw()...
 		case KEY_CTRLR:
 		case KEY_RCTRLR:
