@@ -1,4 +1,8 @@
-﻿w17 24.03.2016 14:55:56 +0300 - build 4594
+﻿w17 24.03.2016 16:14:28 +0300 - build 4595
+
+1. Продолжение 4590, 4594 переключение по Ctrl-Shift-S.
+
+w17 24.03.2016 14:55:56 +0300 - build 4594
 
 1. Продолжение 4590.
    Режим показа размера настраивается: Panel.Info.ShowBytes (default=false); переключение по Ctrl-S. 
